# StegoDetector

./: .gitignore  README.md  main.py  pyproject.toml  requirements-gpu.txt  requirements.txt
scripts/: download_and_extract_data.sh  prepare_data.py  sample_files.py  stego_embed.sh
stegodetector/: dataset.py  evaluate.py  model.py  train.py
